--- a/app/globals.css
+++ b/app/globals.css
@@ -48,11 +48,12 @@
     background-size: 50px 50px;
     z-index: -1;
     animation: gridMove 20s linear infinite;
+    pointer-events: none;
   }
 
   @keyframes gridMove {
-    0% { transform: translate(0, 0); }
-    100% { transform: translate(50px, 50px); }
+    0% { background-position: 0 0; }
+    100% { background-position: 50px 50px; }
   }
 }
 
@@ -273,8 +274,8 @@
 
   /* Animations from Home.css */
   @keyframes gridFloat {
-    0% { transform: translate(0, 0); }
-    100% { transform: translate(100px, 100px); }
+    0% { background-position: 0 0; }
+    100% { background-position: 100px 100px; }
   }
 
   @keyframes float {
